# game_engine_tutorial

./: .gitignore  CMakeLists.txt
src/: Game.cpp  Game.h  game.cpp  logger.cpp  logger.h  main.cpp
src/ECS/: ECS.cpp  ECS.h
src/component/: TransformComponent.h
src/game/: Game.cpp  Game.h
src/logger/: Logger.cpp  Logger.h
src/system/: MovementSystem.h
